kustomize/base/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-api
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: api
    tier: backend
    version: 1.0.0
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 1337
  selector:
    app: api
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      tier: backend
  template:
    metadata:
      labels:
        app: api
        tier: backend
        version: 1.0.0
    spec:
      volumes:
        - name: appsettings-config
          configMap:
            name: app-config
      containers:
        - name: webapi-api
          image: gcr.io/ut-dts-agrc-web-api-dv/api.mapserv.utah.gov/api
          imagePullPolicy: Always
          volumeMounts:
            - name: appsettings-config
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          ports:
            - containerPort: 1337
          readinessProbe:
            httpGet:
              path: /
              port: 1337
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 1337
            initialDelaySeconds: 30
            periodSeconds: 15
