kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapi-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-api-cluster-ingress # Created in terraform
    networking.gke.io/managed-certificates: agrc-api-managed-cert
spec:
  backend:
    serviceName: webapi-explorer
    servicePort: http
  rules:
    - host: agrc-api.dev.utah.gov
      http:
        paths:
          - path: /
            backend:
              serviceName: webapi-explorer
              servicePort: http
          - path: /api/*
            backend:
              serviceName: webapi-api
              servicePort: http
